infra/k8s/match-ride-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: match-ride-depl
spec:
   replicas: 1
   selector:
      matchLabels:
         app: match-ride
   template:
      metadata:
         labels:
            app: match-ride
      spec:
         containers:
            - name: match-ride
              image: kmalae/match-ride
---
apiVersion: v1
kind: Service
metadata:
   name: match-ride-srv
spec:
   selector:
      app: match-ride
   ports:
      - name: match-ride
        protocol: TCP
        port: 3000
        targetPort: 3000
