infra/k8s/review-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: review-depl
spec:
   replicas: 1
   selector:
      matchLabels:
         app: review
   template:
      metadata:
         labels:
            app: review
      spec:
         containers:
            - name: review
              image: kmalae/review
---
apiVersion: v1
kind: Service
metadata:
   name: review-srv
spec:
   selector:
      app: review
   ports:
      - name: review
        protocol: TCP
        port: 3000
        targetPort: 3000
