infra/k8s/ride-request-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: ride-request-depl
spec:
   replicas: 1
   selector:
      matchLabels:
         app: ride-request
   template:
      metadata:
         labels:
            app: ride-request
      spec:
         containers:
            - name: ride-request
              image: kmalae/ride-request
---
apiVersion: v1
kind: Service
metadata:
   name: ride-request-srv
spec:
   selector:
      app: ride-request
   ports:
      - name: ride-request
        protocol: TCP
        port: 3000
        targetPort: 3000
