infra/k8s/topup-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: topup-depl
spec:
   replicas: 1
   selector:
      matchLabels:
         app: topup
   template:
      metadata:
         labels:
            app: topup
      spec:
         containers:
            - name: topup
              image: kmalae/topup
---
apiVersion: v1
kind: Service
metadata:
   name: topup-srv
spec:
   selector:
      app: topup
   ports:
      - name: topup
        protocol: TCP
        port: 3000
        targetPort: 3000
